<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/kalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDelenie"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/delenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"

        android:text="@string/umnogenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelenie" />

    <Button
        android:id="@+id/button2"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/procent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelenie"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/buttonDelenie" />

    <Button
        android:id="@+id/button7"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="61dp"
        android:layout_height="50dp"

        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button15" />

    <Button
        android:id="@+id/button18"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button19" />

    <Button
        android:id="@+id/button19"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toTopOf="@+id/button20" />

    <Button
        android:id="@+id/button20"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/dot"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toTopOf="@+id/button21" />

    <Button
        android:id="@+id/button21"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/rovno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button15"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toTopOf="@+id/button16" />

    <Button
        android:id="@+id/button16"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/button17" />

    <Button
        android:id="@+id/button17"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/button11"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button11" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toTopOf="@+id/button12" />

    <Button
        android:id="@+id/button3"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/backspace"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:onClick="textAdd"
        android:text="@string/c"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/_0"
        android:textSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>